[gd_scene load_steps=16 format=3 uid="uid://bmmgrpo6nr2qy"]

[ext_resource type="Texture2D" uid="uid://dkv4g22xas3m5" path="res://assets/player/player.png" id="1_jo6pd"]
[ext_resource type="Script" path="res://src/character/player.gd" id="1_ojeym"]
[ext_resource type="PackedScene" uid="uid://dqkcfkwa885yn" path="res://src/shooter/shooter.tscn" id="3_itlm0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_as12l"]
size = Vector2(9, 16)

[sub_resource type="Animation" id="Animation_137qy"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [13]
}

[sub_resource type="Animation" id="Animation_nu6ga"]
resource_name = "fall"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [18]
}

[sub_resource type="Animation" id="Animation_xsksq"]
resource_name = "hurt"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [11, 12]
}

[sub_resource type="Animation" id="Animation_pch1s"]
resource_name = "idle"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [13, 14, 15, 16]
}

[sub_resource type="Animation" id="Animation_gc3d8"]
resource_name = "jump"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [17]
}

[sub_resource type="Animation" id="Animation_cfv55"]
resource_name = "run"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cr4g0"]
_data = {
"RESET": SubResource("Animation_137qy"),
"fall": SubResource("Animation_nu6ga"),
"hurt": SubResource("Animation_xsksq"),
"idle": SubResource("Animation_pch1s"),
"jump": SubResource("Animation_gc3d8"),
"run": SubResource("Animation_cfv55")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_tse0h"]
radius = 6.0
height = 16.0

[sub_resource type="Animation" id="Animation_c6s8t"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_5dql1"]
resource_name = "invisible"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gq75a"]
_data = {
"RESET": SubResource("Animation_c6s8t"),
"invisible": SubResource("Animation_5dql1")
}

[node name="Player" type="CharacterBody2D" groups=["player"]]
collision_layer = 32
script = ExtResource("1_ojeym")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_jo6pd")
hframes = 19
frame = 13

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 5)
shape = SubResource("RectangleShape2D_as12l")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_cr4g0")
}
autoplay = "idle"

[node name="DebugLabel" type="Label" parent="."]
offset_left = -24.0
offset_top = -61.0
offset_right = 183.0
offset_bottom = 149.0
scale = Vector2(0.245182, 0.245182)
theme_override_font_sizes/font_size = 48
text = "dwdwdw
dwda
wdwdw"

[node name="sound" type="AudioStreamPlayer2D" parent="." groups=["player"]]

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 20

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(0, 5)
shape = SubResource("CapsuleShape2D_tse0h")

[node name="Shooter" parent="." instance=ExtResource("3_itlm0")]
speed = 300.0
shoot_delay = 1.0

[node name="AnimationPlayerInvisible" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_gq75a")
}

[node name="InvisibleTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="HurtTimer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="timeout" from="InvisibleTimer" to="." method="_on_invisible_timer_timeout"]
[connection signal="timeout" from="HurtTimer" to="." method="_on_hurt_timer_timeout"]
